# mille-feuille

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dev_fetch_deps.py  finput_0000.nml  finput_0001.nml  finput_0002.nml  finput_0003.nml  finput_0004.nml  finput_0005.nml  finput_0006.nml  finput_0007.nml  finput_0008.nml  finput_0009.nml  pyproject.toml  ruff.toml  std_error_0004.txt
.github/actions/: action.yaml
.github/actions/setup_repo/: action.yaml
.github/workflows/: pre-commit-cron-updater.yaml  pre-commit.yaml  run_tests.yaml
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree  installation.doctree  quickstart.doctree
docs/_build/doctrees/api/: acquisition.doctree  cost.doctree  domain.doctree  index.doctree  initialise.doctree  kernel.doctree  optimise.doctree  simulator.doctree  state.doctree  surrogate.doctree  utils.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html  searchindex.js
docs/_build/html/_sources/: installation.rst.txt  quickstart.rst.txt
docs/_build/html/_sources/api/: cost.rst.txt  utils.rst.txt  (+3 more)
docs/_build/html/api/: acquisition.html  cost.html  domain.html  index.html  initialise.html  kernel.html  optimise.html  simulator.html  state.html  surrogate.html  utils.html
docs/api/: acquisition.rst  domain.rst  index.rst  kernel.rst  state.rst  surrogate.rst
examples/async_scheduling/: AsyncSampler.py  README.md  Scheduler.py  Simulator.py  Utils.py  domain.json
examples/loops/: Domain.json  Initialise.py  Learning.py  Optimise.py  PostInitialise.py  README.md  Scheduler.py  Simulator.py  Utils.py
examples/reinforcement_learning/: pendulum.py
examples/test_executables/: README.md  TestScheduler.py  TestSimulator.py  cxxmain.cpp
src/millefeuille/: __init__.py  acquisition.py  asynch.py  cost.py  definitions.py  domain.py  evaluation.py  generators.py  initialise.py  kernel.py  optimise.py  scheduler.py  simulator.py  state.py  surrogate.py  tasks.py  utils.py
src/millefeuille/RL/: __init__.py  actor.py  agent.py  buffer.py  critic.py  environment.py  train.py
src/millefeuille/dashboard/: __init__.py  app.py
test/: test_MFsurrogates.py  test_simple.py
tests/: conftest.py  test_domain.py  test_generator.py  test_optimise.py  test_scheduler.py  test_simulator.py  test_state.py  test_surrogate.py  test_tasks.py  test_utils.py
tests/test_exe/: cxxmain.cpp  fmain.f90  main.f90
