[project]
name = "millefeuille"
description = "Multi Fidelity Bayesian Optimisation wrapper for HPC scale simulations"
readme = "README.md"
authors = [
    {name = "Aidan Crilly @ Imperial College London", email="a.crilly16@imperial.ac.uk"},
]
license = "MIT"
license-files = ["LICENSE*"]
dependencies = [
    "botorch",
    "h5py",
    "numpy",
    "scikit-learn",
    "scipy",
    "jax",
    "equinox",
    "optax",
]
requires-python = ">=3.11"
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-regressions",
    "pytest-cases",
    "f90nml",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
# Test type hints w/ typeguard - currently disabled
addopts = "--import-mode=importlib --strict-markers"
pythonpath = "."
testpaths = ["tests"]

markers = [
    "regression: mark test as a regression test",
    "unit: mark test as a unit test"
]
